[gd_scene load_steps=4 format=3 uid="uid://b4q5uxn7pq6c5"]

[ext_resource type="Script" path="res://user_interfaces/result_screen/result_screen.gd" id="1_b57uo"]

[sub_resource type="LabelSettings" id="LabelSettings_g5jqu"]
font_size = 64
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bhixx"]
font_size = 32
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="ResultScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b57uo")
level_01 = "res://levels/level_01.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.529412, 0.807843, 0.921569, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 128
alignment = 1

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "Result"
label_settings = SubResource("LabelSettings_g5jqu")
horizontal_alignment = 1

[node name="Records" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Best" type="VBoxContainer" parent="MenuContainer/Records"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Records/Best"]
layout_mode = 2
text = "Best Record"
label_settings = SubResource("LabelSettings_bhixx")
horizontal_alignment = 1

[node name="Time" type="HBoxContainer" parent="MenuContainer/Records/Best"]
layout_mode = 2
theme_override_constants/separation = 128

[node name="Time" type="Label" parent="MenuContainer/Records/Best/Time"]
layout_mode = 2
text = "Time:"
label_settings = SubResource("LabelSettings_bhixx")

[node name="Value" type="Label" parent="MenuContainer/Records/Best/Time"]
layout_mode = 2
text = "00:00:00"
label_settings = SubResource("LabelSettings_bhixx")

[node name="Diamonds" type="HBoxContainer" parent="MenuContainer/Records/Best"]
layout_mode = 2
theme_override_constants/separation = 128

[node name="Time" type="Label" parent="MenuContainer/Records/Best/Diamonds"]
layout_mode = 2
text = "Diamonds:"
label_settings = SubResource("LabelSettings_bhixx")

[node name="Value" type="Label" parent="MenuContainer/Records/Best/Diamonds"]
layout_mode = 2
text = "00"
label_settings = SubResource("LabelSettings_bhixx")

[node name="Current" type="VBoxContainer" parent="MenuContainer/Records"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MenuContainer/Records/Current"]
layout_mode = 2
text = "Current Record"
label_settings = SubResource("LabelSettings_bhixx")
horizontal_alignment = 1

[node name="Time" type="HBoxContainer" parent="MenuContainer/Records/Current"]
layout_mode = 2
theme_override_constants/separation = 128

[node name="Time" type="Label" parent="MenuContainer/Records/Current/Time"]
layout_mode = 2
text = "Time:"
label_settings = SubResource("LabelSettings_bhixx")

[node name="Value" type="Label" parent="MenuContainer/Records/Current/Time"]
layout_mode = 2
text = "00:00:00"
label_settings = SubResource("LabelSettings_bhixx")

[node name="Diamonds" type="HBoxContainer" parent="MenuContainer/Records/Current"]
layout_mode = 2
theme_override_constants/separation = 128

[node name="Time" type="Label" parent="MenuContainer/Records/Current/Diamonds"]
layout_mode = 2
text = "Diamonds:"
label_settings = SubResource("LabelSettings_bhixx")

[node name="Value" type="Label" parent="MenuContainer/Records/Current/Diamonds"]
layout_mode = 2
text = "00"
label_settings = SubResource("LabelSettings_bhixx")

[node name="Buttons" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Retry" type="Button" parent="MenuContainer/Buttons"]
custom_minimum_size = Vector2(125, 75)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="Quit" type="Button" parent="MenuContainer/Buttons"]
custom_minimum_size = Vector2(125, 75)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 32
text = "Quit
"

[connection signal="pressed" from="MenuContainer/Buttons/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="MenuContainer/Buttons/Quit" to="." method="_on_quit_pressed"]
